--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Saber Documentation
 description: Documentation for the Saber Protocol
-theme: just-the-docs
+theme: jekyll-theme-minimal
 
 url: https://stayrar3.github.io/saber-docs
 
