--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Saber Documentation
 description: Documentation for the Saber Protocol
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 url: https://stayrar3.github.io/saber-docs
 
