--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Saber Documentation
 description: Documentation for the Saber Protocol
-remote_theme: pages-themes/leap-day@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 plugins:
 - jekyll-remote-theme
 
